--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@fortawesome/free-brands-svg-icons": "^5.15.1",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "antd": "^4.10.2",
     "framer-motion": "^3.2.1",
     "next": "10.0.5",
     "next-images": "^1.6.2",
     "postcss-flexbugs-fixes": "^5.0.2",
     "postcss-preset-env": "^6.7.0",
     "react": "17.0.1",
+    "react-circular-progressbar": "^2.0.3",
     "react-dom": "17.0.1",
     "react-slidedown": "^2.4.5",
     "react-web-vector-icons": "^1.0.2"
