--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "react": "17.0.1",
     "react-circular-progressbar": "^2.0.3",
     "react-dom": "17.0.1",
+    "react-intersection-observer": "^8.31.0",
+    "react-intersection-observer-hook": "^1.0.4",
+    "react-router-hash-link": "^2.3.1",
     "react-slidedown": "^2.4.5",
     "react-web-vector-icons": "^1.0.2"
   },
