--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "react-dom": "17.0.1",
     "react-intersection-observer": "^8.31.0",
     "react-intersection-observer-hook": "^1.0.4",
+    "react-modal": "^3.12.1",
     "react-router-hash-link": "^2.3.1",
     "react-slidedown": "^2.4.5",
+    "react-spinners": "^0.10.4",
     "react-web-vector-icons": "^1.0.2"
   },
   "devDependencies": {
